[gd_scene load_steps=4 format=3 uid="uid://cj44kymh3qet2"]

[ext_resource type="Texture2D" uid="uid://bo5qqywheyasm" path="res://assets/hunter1.png" id="1_u0bok"]
[ext_resource type="Script" path="res://Player.gd" id="2_yfii6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2lfuy"]
radius = 72.2222
height = 144.444

[node name="Player" type="Sprite2D"]
scale = Vector2(0.18, 0.18)
texture = ExtResource("1_u0bok")
script = ExtResource("2_yfii6")

[node name="Reload_speed" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Power_up_cooldown" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["Player"]]
position = Vector2(-66.6667, 33.3333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2(27.7778, -11.1111)
shape = SubResource("CapsuleShape2D_2lfuy")

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(144.444, 50)

[connection signal="timeout" from="Reload_speed" to="." method="_on_reload_speed_timeout"]
[connection signal="timeout" from="Power_up_cooldown" to="." method="_on_power_up_cooldown_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
